# vm-cli-template

./: .env_project  .env_template  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: docker-build.yml  python-dev.yml  release.yml
app/: main.py
app/commands/: test.py
app/service/: test_service.py
app/utils/: config.py  logHelper.py  utils.py
scripts/: clean.sh  format-imports.sh  format.sh  lint.sh  setup-dev.sh
test/: test_default.py
vm_cli/: main.py
vm_cli/commands/: test.py
vm_cli/service/: test_service.py
vm_cli/utils/: config.py  defaultLogBanner.py  locater.py  logHelper.py  utils.py
vm_cli_template/: cli.py  config.py
vm_cli_template/commands/: echo.py  test.py
vm_cli_template/main/: cli.py
vm_cli_template/utilities/: utils.py
