# [metadata]
# name = vm_cli
# # description = slap that like button
# author = MVladislav
# license = GNU AGPLv3
# license_file = LICENSE
# platforms = unix, linux, osx, cygwin, win32
# classifiers =
#     Programming Language :: Python :: 3
#     Programming Language :: Python :: 3 :: Only
#     Programming Language :: Python :: 3.6
#     Programming Language :: Python :: 3.7
#     Programming Language :: Python :: 3.8
#     Programming Language :: Python :: 3.9

# [options]
# packages =
#     slapping
# install_requires =
#     requests>=2
# python_requires = >=3.8
# package_dir =
#     =app
# zip_safe = yes

[options.extras_require]
testing =
pytest >=6.0
pytest-cov >=2.0
mypy >=0.910
flake8 >=3.9
tox >=3.24

[options.package_data]
slapping = py.typed

[flake8]
# max-line-length = 160
max-line-length = 127
max-complexity = 10
exclude = build,dist,docs/conf.py,organice/migrations,*.egg-info

[aliases]
test=pytest

[pylint]
# Run with: python3 -m pylint --rcfile=setup.cfg `find -regextype egrep -regex '(.*.py)$'`
fail-under=10
max-line-length=127
disable = C0103,C0111
ignore = migrations
ignore-docstrings = yes
output-format = colorized

# setup.cfg
[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths = app/tests
